Update and rename 048_반응형레이아웃-순서변경.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>반응형레이아웃 순서변경</title>
-    <link rel="stylesheet" href="../css/048.css">
+    <link rel="stylesheet" href="css/048.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 
             <h1 class="logo">
                 <a href="#" onclick="return false">
-                    <img src="../img/logo.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </a>
             </h1> <!-- .logo png -->
 
@@ -32,11 +32,11 @@
             </ul> <!-- .sub_menu end -->
 
             <a href="#" class="menu_icon">
-                <img src="../img/menu.png" alt="">
+                <img src="img/menu.png" alt="">
             </a> <!-- .menu_icon end -->
 
             <a href="#" class="close">
-                <img src="../img/엑스.png" alt="">
+                <img src="img/엑스.png" alt="">
             </a> <!-- .menu_icon end -->
 
             <div class="mobile_nav">
@@ -69,21 +69,21 @@
             <div class="box_01">
                 <div class="item item_big">
                     <figure>
-                        <img src="../img/조명2.jpg" alt="">
+                        <img src="img/조명2.jpg" alt="">
                     </figure>
                     <div>
                         <h4>Jackson</h4>
                         <p>Persistent maximized paradigm</p>
                     </div>
                     <a href="#" onclick="return false" class="view_more">
-                        <img src="../img/more_btn.png" alt="">
+                        <img src="img/more_btn.png" alt="">
                     </a>
                 </div> <!-- .item end -->
 
                 <div class="box_02">
                     <div class="item item_small">
                         <figure>
-                            <img src="../img/조명15.jpg" alt="">
+                            <img src="img/조명15.jpg" alt="">
                         </figure>
                         <div>
                             <h4>Jackson</h4>
@@ -92,7 +92,7 @@
                     </div> <!-- .item end -->
                     <div class="item item_small">
                         <figure>
-                            <img src="../img/조명27.jpg" alt="">
+                            <img src="img/조명27.jpg" alt="">
                         </figure>
                         <div>
                             <h4>Jackson</h4>
@@ -111,7 +111,7 @@
         <div class="inner">
             <div class="title">
                 <figure>
-                    <img src="../img/조명5.jpg" alt="">
+                    <img src="img/조명5.jpg" alt="">
                 </figure>
                 <div>
                     <h3>Brand</h3>
@@ -121,7 +121,7 @@
 
             <a href="#" onclick="return false" class="item item_small">
                 <figure>
-                    <img src="../img/조명6.jpg" alt="">
+                    <img src="img/조명6.jpg" alt="">
                 </figure>
                 <div>
                     <p>Jacob</p>
@@ -131,7 +131,7 @@
 
             <a href="#" onclick="return false" class="item item_small">
                 <figure>
-                    <img src="../img/조명2.jpg" alt="">
+                    <img src="img/조명2.jpg" alt="">
                 </figure>
                 <div>
                     <p>Jacob</p>
@@ -141,7 +141,7 @@
 
             <a href="#" onclick="return false" class="item item_big">
                 <figure>
-                    <img src="../img/조명7.jpg" alt="">
+                    <img src="img/조명7.jpg" alt="">
                 </figure>
                 <div>
                     <p>Jacob</p>
@@ -151,7 +151,7 @@
 
             <a href="#" onclick="return false" class="item item_big">
                 <figure>
-                    <img src="../img/조명8.jpg" alt="">
+                    <img src="img/조명8.jpg" alt="">
                 </figure>
                 <div>
                     <p>Jacob</p>
@@ -171,7 +171,7 @@
             <div class="item_wrap">
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명23.jpg" alt="">
+                        <img src="img/조명23.jpg" alt="">
                     </figure>
                     <div class="item_info">
                         <span>Electronics</span>
@@ -182,7 +182,7 @@
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명2.jpg" alt="">
+                        <img src="img/조명2.jpg" alt="">
                     </figure>
                     <div class="item_info">
                         <span>Electronics</span>
@@ -193,7 +193,7 @@
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명17.jpg" alt="">
+                        <img src="img/조명17.jpg" alt="">
                     </figure>
                     <div class="item_info">
                         <span>Electronics</span>
@@ -204,7 +204,7 @@
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명14.jpg" alt="">
+                        <img src="img/조명14.jpg" alt="">
                     </figure>
                     <div class="item_info">
                         <span>Electronics</span>
@@ -223,35 +223,35 @@
             <div class="item_wrap">
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명7.jpg" alt="">
+                        <img src="img/조명7.jpg" alt="">
                     </figure>
                     <span>Pendant</span>
                 </a> <!-- .item end -->
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명22.jpg" alt="">
+                        <img src="img/조명22.jpg" alt="">
                     </figure>
                     <span>Table</span>
                 </a> <!-- .item end -->
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명44.jpg" alt="">
+                        <img src="img/조명44.jpg" alt="">
                     </figure>
                     <span>Floar</span>
                 </a> <!-- .item end -->
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명41.jpg" alt="">
+                        <img src="img/조명41.jpg" alt="">
                     </figure>
                     <span>Wall</span>
                 </a> <!-- .item end -->
 
                 <a href="#" onclick="return false" class="item">
                     <figure>
-                        <img src="../img/조명38.jpg" alt="">
+                        <img src="img/조명38.jpg" alt="">
                     </figure>
                     <span>Ceiling</span>
                 </a> <!-- .item end -->
